citrix-ADC-one-tier-microservice-deployment/yaml_files/cic_vpx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:latest"
        args:
          - --ingress-classes
            citrix
          - --feature-node-watch
            false
        imagePullPolicy: Always
